# buckshot-roulette-bot

./: .clang-format  .clang-tidy  .gitignore  BotPlayer.cpp  BotPlayer.h  CMakeLists.txt  Exceptions.h  Game.cpp  Game.h  HumanPlayer.cpp  HumanPlayer.h  Player.cpp  Player.h  README.md  Shotgun.cpp  Shotgun.h  SimulationState.h  main.cpp  simulate.cpp
.github/workflows/: build.yml
Items/: Beer.cpp  Beer.h  Cigarette.cpp  Cigarette.h  Handcuffs.cpp  Handcuffs.h  Handsaw.cpp  Handsaw.h  Item.cpp  Item.h  MagnifyingGlass.cpp  MagnifyingGlass.h
Simulations/: SimulatedGame.cpp  SimulatedGame.h  SimulatedPlayer.cpp  SimulatedPlayer.h  SimulatedShotgun.cpp  SimulatedShotgun.h
tests/: tests.cpp
